--- a/index.html
+++ b/index.html
@@ -355,8 +355,8 @@ What are you doing here?! you sneaky developer...
           <ul class="tech-stack-wrapper ">
 
             <li class="tech-stack-box about-info" data-aos="fade-up">
-            <span style="display:flex; flex-direction:column;justify-content:center; align-items:center">
-                 <img src="src/webp/leader.jpeg" style="border-radius:10%;margin-top:10px" alt="Vinod Jangid" tabindex="0" aria-label="image of vinod" />
+            <span style="display:flex; flex-direction:column;justify-content:center; align-items:center;height:100%;">
+                 <img src="src/webp/leader.jpeg" style="border-radius:10%;margin-top:10px;width:80%;max-height:100%;" alt="Vinod Jangid" tabindex="0" aria-label="image of vinod" />
                 <span class="tooltip">Leader</span>
                 <p tabindex="0" style="margin-top:10px">
                   Rahul Khinchi
@@ -364,8 +364,8 @@ What are you doing here?! you sneaky developer...
               </span>
             </li>
             <li class="tech-stack-box about-info" data-aos="fade-up">
-              <span style="display:flex; flex-direction:column;justify-content:center; align-items:center">
-                  <img src="src/webp/shiv.jpeg" style="border-radius:10%;margin-top:10px" alt="Vinod Jangid" tabindex="0" aria-label="image of vinod" />
+              <span style="display:flex; flex-direction:column;justify-content:center; align-items:center;height:100%;">
+                  <img src="src/webp/shiv.jpeg" style="border-radius:10%;margin-top:10px;width:80%;max-height:100%;" alt="Vinod Jangid" tabindex="0" aria-label="image of vinod" />
                   <span class="tooltip">Outreach Lead</span>
                   <p tabindex="0" style="margin-top:10px">
                    Shiv Vishen
@@ -373,8 +373,8 @@ What are you doing here?! you sneaky developer...
                 </span>
             </li>
             <li class="tech-stack-box about-info" data-aos="fade-up">
-              <span style="display:flex; flex-direction:column;justify-content:center; align-items:center">
-                  <img src="src/webp/kshitij.jpeg" style="border-radius:10%;margin-top:10px" alt="Vinod Jangid" tabindex="0" aria-label="image of vinod" />
+              <span style="display:flex; flex-direction:column;justify-content:center; align-items:center;height:100%;">
+                  <img src="src/webp/kshitij.jpeg" style="border-radius:10%;margin-top:10px;width:80%;max-height:100%;" alt="Vinod Jangid" tabindex="0" aria-label="image of vinod" />
                   <span class="tooltip">Tech Lead</span>
                   <p tabindex="0" style="margin-top:10px">
                     Kshitij Verma
@@ -382,8 +382,8 @@ What are you doing here?! you sneaky developer...
                 </span>
             </li>
             <li class="tech-stack-box about-info" data-aos="fade-up">
-              <span style="display:flex; flex-direction:column;justify-content:center; align-items:center">
-                  <img src="src/webp/harsh.jpeg" style="border-radius:10%;margin-top:10px" alt="Vinod Jangid" tabindex="0" aria-label="image of vinod" />
+              <span style="display:flex; flex-direction:column;justify-content:center; align-items:center;height:100%;">
+                  <img src="src/webp/harsh.jpeg" style="border-radius:10%;margin-top:10px;width:80%;max-height:100%;" alt="Vinod Jangid" tabindex="0" aria-label="image of vinod" />
                   <span class="tooltip">Technology Leadership Lead</span>
                   <p tabindex="0" style="margin-top:10px">
                    Harsh Trivedi
@@ -391,8 +391,8 @@ What are you doing here?! you sneaky developer...
                 </span>
             </li>
             <li class="tech-stack-box about-info" data-aos="fade-up">
-              <span style="display:flex; flex-direction:column;justify-content:center; align-items:center">
-                  <a href="" ><img src="src/png/TEAM.PNG" style="border-radius:10%;margin-top:10px;" alt="Vinod Jangid" tabindex="0" aria-label="image of vinod" /></a>
+              <span style="display:flex; flex-direction:column;justify-content:center; align-items:center;height:100%;">
+                  <a href="" ><img src="src/png/TEAM.PNG" style="border-radius:10%;margin-top:10px;width:80%;max-height:100%;" alt="Vinod Jangid" tabindex="0" aria-label="image of vinod" /></a>
                   <p tabindex="0" style="margin-top:10px">
                   OUR TEAM
                   </p>
