--- a/index.html
+++ b/index.html
@@ -88,10 +88,9 @@ What are you doing here?! you sneaky developer...
     <div class="cursor-outer" id="cursor-outer"></div>
 
     <div class="navbar" id="navbar">
-      <div class="hey">Hey!</div>
       <div class="logo" tabindex="0" aria-label="vinod jangid logo">
         <div class="logo-top">
-          <img src="src/webp/logo.jpeg" alt="animation-head" id="nav-avatar"/>
+          <img src="src/webp/ll.png" alt="animation-head" id="nav-avatar"/>
         </div>
       </div>
       <div class="navbar-tabs" id="navbar-tabs">
@@ -182,9 +181,6 @@ What are you doing here?! you sneaky developer...
           <p class="jello">o</p>
           <p class="jello">m</p>
           <p class="jello">e</p>
-          <p class="jello">(</p>
-          <p class="jello">)</p>
-          <p class="jello">;</p>
           &nbsp;
           <p class="jello">W</p>
           <p class="jello">e</p>
@@ -328,7 +324,7 @@ What are you doing here?! you sneaky developer...
           </div>
 
           <div class="dp" data-aos="fade-up">
-            <img src="src/png/about.jfif" alt="Vinod Jangid" tabindex="0" aria-label="image of vinod" />
+            <img src="src/png/ll.png" alt="Vinod Jangid" tabindex="0" aria-label="image of vinod" />
           </div>
         </div>
       </div>
@@ -350,7 +346,7 @@ What are you doing here?! you sneaky developer...
         <div class="frontend-dev-section">
           <h3 class="frontend-dev-heading" data-aos="fade-up" tabindex="0"
             aria-label="As a frontend a developer these are the skills i have">
-           OUR_TEAM();
+           OUR_TEAM;
           </h3>
           <ul class="tech-stack-wrapper ">
 
@@ -437,17 +433,17 @@ What are you doing here?! you sneaky developer...
 
           <div data-aos="fade-up" class="project-box-wrapper">
             <div class="project-box project-box2" id="project-box2">
-              <div class="image-div-2">
-                <img src="src/webp/post2.jpeg" alt="Pexelicon website preview image" />
-              </div>
               <div class="info-div">
                 <article class="ProjectHeading">  GDSC WoW 2023           🌟📢👩‍💻
                 </article>
                 <p class="ProjectDescription">
                   Speakers from Tech Giants, sponsor mention, 
                   700+ Developers Best WoW of that year.
-                  Partnering with Google Developer Student Clubs (GDSC),our WoW events have been a melting pot of ideas and learning, helping students to network and grow.              </div>
-              
+                  Partnering with Google Developer Student Clubs (GDSC),our WoW events have been a melting pot of ideas and learning, helping students to network and grow.              
+                </div>
+                  <div class="image-div-1">
+                    <img src="src/webp/post2.jpeg" alt="Pexelicon website preview image" />
+                  </div>
             </div>
           </div>
 
@@ -473,9 +469,6 @@ What are you doing here?! you sneaky developer...
   
             <div data-aos="fade-up" class="project-box-wrapper">
               <div class="project-box project-box2" id="project-box2">
-                <div class="image-div-2">
-                  <img src="src/webp/post4.jpeg" alt="Pexelicon website preview image" />
-                </div>
                 <div class="info-div">
                   <article class="ProjectHeading">Fetch ai hackathon👩‍💻🏆
                   </article>
@@ -486,6 +479,9 @@ What are you doing here?! you sneaky developer...
                       <li class="ProjectDescription">Introduced the Fetch.ai library for developing projects on microagent communication.</li>
                       <li class="ProjectDescription">Prize pool of up to $10,000, attracting top talent and innovative solutions.</li>
                     </ul>
+                </div>
+                <div class="image-div-1">
+                  <img src="src/webp/post4.jpeg" alt="Pexelicon website preview image" />
                 </div>
                 
               </div>
@@ -511,12 +507,12 @@ What are you doing here?! you sneaky developer...
       <div class="footercontainer">
         <div class="two-words">
           <article tabindex="0" aria-label="Learning, Living, and Leveling Up, my quote">
-            "if you like CODING, let's CONNECT and have a COFFEE."
+            "Encouraging Learning In Public"
           </article>
         </div>
         <div class="social-media-container">
           <div class="getintouch-heading">
-            <article>GetinTouch();</article>
+            <article>Connect With US</article>
           </div>
           <div class="logos">
             <a href="https://www.instagram.com/decodecafe_x/" target="_blank" tabindex="0"
