--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@ What are you doing here?! you sneaky developer...
             </li>
             <li class="tech-stack-box about-info" data-aos="fade-up">
               <span style="display:flex; flex-direction:column;justify-content:center; align-items:center;height:100%;">
-                  <a href="" ><img src="src/png/TEAM.PNG" style="border-radius:10%;margin-top:10px;width:80%;max-height:100%;" alt="Vinod Jangid" tabindex="0" aria-label="image of vinod" /></a>
+                  <a href="team.html" ><img src="src/png/TEAM.PNG" style="border-radius:10%;margin-top:10px;width:80%;max-height:100%;" alt="Vinod Jangid" tabindex="0" aria-label="image of vinod" /></a>
                   <p tabindex="0" style="margin-top:10px">
                   OUR TEAM
                   </p>
