--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ What are you doing here?! you sneaky developer...
       <div class="hey">Hey!</div>
       <div class="logo" tabindex="0" aria-label="vinod jangid logo">
         <div class="logo-top">
-          <img src="src/webp/logo.jpeg" alt="animation-head" id="nav-avatar"/>
+          <img src="src/png/logo.png" alt="animation-head" id="nav-avatar"/>
         </div>
       </div>
       <div class="navbar-tabs" id="navbar-tabs">
