--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@ What are you doing here?! you sneaky developer...
 
             <li class="tech-stack-box about-info" data-aos="fade-up">
             <span style="display:flex; flex-direction:column;justify-content:center; align-items:center;height:100%;">
-                 <img src="src/webp/leader.jpeg" style="border-radius:10%;margin-top:10px;width:80%;max-height:100%;" alt="Vinod Jangid" tabindex="0" aria-label="image of vinod" />
+                 <img src="src/webp/leader.jpeg" style="border-radius:10%;margin-top:10px;width:80%;max-height:100%;" alt="Rahul Khinchi" tabindex="0" aria-label="image of vinod" />
                 <span class="tooltip">Leader</span>
                 <p tabindex="0" style="margin-top:10px">
                   Rahul Khinchi
@@ -365,7 +365,7 @@ What are you doing here?! you sneaky developer...
             </li>
             <li class="tech-stack-box about-info" data-aos="fade-up">
               <span style="display:flex; flex-direction:column;justify-content:center; align-items:center;height:100%;">
-                  <img src="src/webp/shiv.jpeg" style="border-radius:10%;margin-top:10px;width:80%;max-height:100%;" alt="Vinod Jangid" tabindex="0" aria-label="image of vinod" />
+                  <img src="src/webp/shiv.jpeg" style="border-radius:10%;margin-top:10px;width:80%;max-height:100%;" alt="Shiv Vishen" tabindex="0" aria-label="image of vinod" />
                   <span class="tooltip">Outreach Lead</span>
                   <p tabindex="0" style="margin-top:10px">
                    Shiv Vishen
@@ -374,16 +374,16 @@ What are you doing here?! you sneaky developer...
             </li>
             <li class="tech-stack-box about-info" data-aos="fade-up">
               <span style="display:flex; flex-direction:column;justify-content:center; align-items:center;height:100%;">
-                  <img src="src/webp/kshitij.jpeg" style="border-radius:10%;margin-top:10px;width:80%;max-height:100%;" alt="Vinod Jangid" tabindex="0" aria-label="image of vinod" />
+                  <img src="src/webp/kshitij.jpeg" style="border-radius:10%;margin-top:10px;width:80%;max-height:100%;" alt="Kshitij Varma" tabindex="0" aria-label="image of vinod" />
                   <span class="tooltip">Tech Lead</span>
                   <p tabindex="0" style="margin-top:10px">
-                    Kshitij Verma
+                    Kshitij Varma
                   </p>
                 </span>
             </li>
             <li class="tech-stack-box about-info" data-aos="fade-up">
               <span style="display:flex; flex-direction:column;justify-content:center; align-items:center;height:100%;">
-                  <img src="src/webp/harsh.jpeg" style="border-radius:10%;margin-top:10px;width:80%;max-height:100%;" alt="Vinod Jangid" tabindex="0" aria-label="image of vinod" />
+                  <img src="src/webp/harsh.jpeg" style="border-radius:10%;margin-top:10px;width:80%;max-height:100%;" alt="Harsh trivedi " tabindex="0" aria-label="image of vinod" />
                   <span class="tooltip">Technology Leadership Lead</span>
                   <p tabindex="0" style="margin-top:10px">
                    Harsh Trivedi
